--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
 # Site settings
 title: Mike At Work
-email: mikatwork@themikehogg.com
+email: mikeatwork88@themikehogg.com
 description: > # this means to ignore newlines until "baseurl:"
   Mike's new jekyll blog using github.io
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: none
 github_username:  mikeatwork88
+highlighter: pygments
 
 # Build settings
-markdown: redcarpet
+markdown: kramdown
